# neon-codebase

./: .coveragerc  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  Common.cmake  Makefile  Makefile.common  NEON_ROOT  README.md  Top.cmake  build-ext-libs.sh  caffe  cv2  disable_env  enable_env  ffvideo  install_python_deps.sh  lmdb  neon-deps.sh  neon_repos.sh  post_requirements.txt  pre_requirements.txt  pre_requirements2.txt  requirements.txt  run_tests.sh  test.model  valgrind_test_script.py
api/: BadImageFilter.py  (+41 more)
cvutils/: CMakeLists.txt  TextDetection.cc  colorname.py  features.py  imageutils.py  pycv_interface.cc  pycv_interface.h  pycvutils.py  smartcrop.py
cvutils/global_contrast_saliency/: CMakeLists.txt  readme
cvutils/global_contrast_saliency/CmLib/: CmLib.h  stdafx.h
cvutils/global_contrast_saliency/CmLib/Basic/: CmCv.cpp  CmCv.h  CmDefinition.cpp  CmDefinition.h  CmFile.cpp  CmFile.h  CmTimer.h
cvutils/global_contrast_saliency/CmLib/Cluster/: CmColorQua.cpp  CmGMM.h
cvutils/global_contrast_saliency/CmLib/Illustration/: CmEvaluation.cpp  CmIllu.h  CmShow.cpp
cvutils/global_contrast_saliency/CmLib/OtherAlg/: CmCurveEx.cpp
cvutils/global_contrast_saliency/CmLib/Saliency/: CmSalCut.cpp  CmSaliencyGC.cpp  CmSaliencyRC.cpp
cvutils/global_contrast_saliency/CmLib/Segmentation/Maxflow/: block.h  graph.h
cvutils/global_contrast_saliency/CmLib/Segmentation/MeanShift/: ms.cpp  ms.h  rlist.cpp  rlist.h
cvutils/global_contrast_saliency/Saliency/: stdafx.h
cvutils/test/: ProfileTextDetection.cc  colorname_test.py  crop_images_in_dir.py  smartcrop_test.py  test_imageutils.py
externalLibs/flann/src/python/: CMakeLists.txt  setup.py.tpl
imageservingplatform/neon_isp/: CMakeLists.txt  Makefile  Notes  account.cpp  account.h  accountHashtable.cpp  accountHashtable.h  config  defaultThumbnail.cpp  defaultThumbnail.h  defaultThumbnailHashtable.cpp  defaultThumbnailHashtable.h  directive.cpp  directive.h  directiveHashtable.cpp  directiveHashtable.h  directiveHashtableTester.cpp  fraction.cpp  fraction.h  isp_s3downloader.py  mastermind.cpp  mastermind.h  mastermind.validated.test  neonException.cpp  neonException.h  neonHash.cpp  neonHash.h  neonLog.cpp  neonLog.h  neonPublisherHashtable.cpp  neonPublisherHashtable.h  neon_alerting.c  neon_alerting.h  neon_cfg.c  neon_cfg.h  neon_config.h  neon_constants.h  neon_directive_tester  neon_directive_tester.c  neon_error_codes.c  (+52 more)
imageservingplatform/neon_isp/include/: url_utils.hpp  utility.hpp
imageservingplatform/neon_isp/rapidjson/: reader.h
imageservingplatform/neon_isp/test/: Makefile  default_thumbnail_test.cc  fractions_test.cc  isp_api_test.py  isp_api_test2.py  kfmastermind.api.test  mastermind  mastermind.api.test  mastermind.expired  mastermind.invalid  mastermind.new  mastermind.one_invalid  mastermind.test  mastermind.test.invalid  mastermind.utf8  mastermind.validated.test  neon_directivehashtable_test.cc  neon_isp_misc_test.cc  neon_mastermind_test.cc  neon_publisherhashtable_test.cc  neon_service_helper_test.cc  neon_utils_test.cc  nginx-test.conf  nginx_isp_test_conf.py  rapidjson_test.cc  s3cmd_fakes3cfg.py  s3uploader.py  test_utils.cc  test_utils.hpp
imageservingplatform/neon_isp/test/testFiles/: defThumbBase.json  lackingDefaultSizeDirective.json  lackingHeightDirective.json  lackingSlashesDirective.json  lackingWidthDirective.json  noUrlsGoodDirective.json
model/: CMakeLists.txt  LOCAL_SEARCH_TEST_AND_EXAMPLE.py  TextDetection.cc  TextDetection.h  TextDetectionPy.cc  __init__.py  _gpuModel.py  _gpuPredictor.py  _gpuPredictorLite.py  _model.py  add_filter_to_model.py  aquila_inference.proto  aquila_inference_pb2.py  batch-runner.sh  calc_distance.py  clip_finder.py  colorname.py  compare_sampling_strategies.py  create_valence_video.py  define_local_model.py  define_model.py  describe_model.py  errors.py  eye_linear_model  features.py  filters.py  find_fades.py  generate_clip.py  gifstractor.py  gpu_video_searcher.py  knn_cluster_model.py  local_video_searcher.py  mcmh.py  metropolisHastingsSearch.py  parse_faces.py  predictor.py  pycv_interface.h  remove_disk_cache.py  runner.py  sampling_strategies.py  (+10 more)
model/custom_experiments/: gopro_clustering.ipynb  gopro_surfing.ipynb  merge_gopro_data.ipynb
model/customer_specific/: gopro.py
model/demographics/: 00000000-aquilav1-score.pkl  00000000-prevmodel-score.pkl  20160000-aquilav1-score.pkl  20160000-prevmodel-score.pkl  20160707-test.pkl  20160713-aquilav2-bias  20160713-aquilav2-score  20160713-aquilav2-score.pkl  20160713-aquilav2-weight  20160713-aquilav2-weight.pkl  20160713-test-score.pkl
model/test/: ProfileTextDetection.cc  TextDetectionTest.cc  aquila_LS_test.py  colorname_exp.py  colorname_test.py  estimate_frames_error.py  eval_blur_prediction.py  extract_all_frames.py  filter_test.py  model_file_test.py  model_test.py  model_validation.py  plot_filter_scores.py  predictor_test.py  profile_filter.py  profile_model.py  profile_model_memory.py  seek_frame_difference.py  simple_model.model  smartcrop_test.py  timing_operations.py
utils/: CMakeLists.txt  autoscale.py  aws.py  backfill_cdn.py  backup_redis_s3.sh  botoutils.py  check_video_db.py  connectedcomponents.cpp  connectedcomponents.hpp  connection_pool.py  cvutils-inl.h  cvutils.cc  cvutils.h  dists.py  gzipstream.py  http.py  image_url_to_video_link.py  imageutils.py  inputsanitizer.py  logs.py  make_neon_requests.py  make_pip_repo.py  monitor.py  mr.py  neon.py  net.py  obj.py  options.py  prod.py  ps.py  pycvutils.py  rand.py  runningstat.py  s3.py  s3logaggregator.py  sqsmanager.py  statemon.py  strutils.py  sync.py  twitter_rest.py  (+1 more)
utils/test/: autoscale_test.py  backfill_cdn_test.py  botoutils_test.py  connection_pool_test.py  gzipstream_test.py  http_test.py  inputsantizer_test.py  logs_test.py  options_test.py  options_test_module.py  ps_test.py  pycvutils_test.py  pycvutils_validation.py  rotated.mov  s3_test.py  statemon_test.py  statemon_test_module.py  sync_test.py  test_imageutils.py  test_s3logaggregator.py  test_sqsmanager.py  test_video_download.py
(+1026 files in other folders)
